get projects by keywords
