# swagger_output.json
@@ -91,6 +91,218 @@
           }
         }
       }
+    },
+    "/university/projects/teaching": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter os projetos de ensino.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/research": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter os projetos de pesquisa.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/extension": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter os projetos de extensão.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/teaching/wordcloud": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter as palavras da wordcloud dos projetos de ensino.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/research/wordcloud": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter as palavras da wordcloud dos projetos de pesquisa.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/extension/wordcloud": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter as palavras da wordcloud dos projetos de extensão.",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/teaching/wordcloud/{nome_unidade_projeto}": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter as palavras da wordcloud dos projetos de ensino.",
+        "parameters": [
+          {
+            "name": "nome_unidade_projeto",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Nome da unidade academica do projeto (INSTITUTO DE INFORMATICA)"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/research/wordcloud/{nome_unidade_projeto}": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter as palavras da wordcloud dos projetos de pesquisa.",
+        "parameters": [
+          {
+            "name": "nome_unidade_projeto",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Nome da unidade academica do projeto (INSTITUTO DE INFORMATICA)"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects/extension/wordcloud/{nome_unidade_projeto}": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter as palavras da wordcloud dos projetos de extensão.",
+        "parameters": [
+          {
+            "name": "nome_unidade_projeto",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Nome da unidade academica do projeto (INSTITUTO DE INFORMATICA)"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/university/projects": {
+      "post": {
+        "tags": [
+          "Projects"
+        ],
+        "description": "Endpoint para obter projetos baseado em um array de keywords.",
+        "parameters": [
+          {
+            "name": "keywords",
+            "in": "body",
+            "required": true,
+            "description": "Array of project keywords",
+            "example": [
+              "Inteligência",
+              "artificial"
+            ],
+            "schema": {
+              "type": "object",
+              "properties": {}
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   },
   "definitions": {
